# OpenVDB_Voxel

./: .gitignore  CMakeLists.txt  OpenVDB_Voxel.def  OpenVDB_Voxel.sln  run_singularity.sh  singularity_instructions.text  structure.txt
BashScripts/: JobController_default.sh  JobController_template.sh  MountingTest.sh  SingularityController.sh
BatchScripts/: BatchJob_12.bat  BatchJob_16.bat  BatchJob_8_run_01.bat  BatchJob_Template.bat  BatchProcess_16.bat  BatchProcess_8.bat  BatchProcess_Template.bat  Benchmark_BatchJob_16.bat  ControllerProcess_12.bat  ControllerProcess_18.bat  ControllerProcess_Template.bat  job_master.bat  run_all.bat  template_01.txt  template_02.txt
BatchScripts/Parallel_Run_Logs/BatchJob/: Instance001_stdout.txt  Instance002_stdout.txt  Instance003_stdout.txt  Instance004_stdout.txt  Instance005_stdout.txt  Instance006_stdout.txt  Instance007_stdout.txt  Instance008_stdout.txt  Instance009_stdout.txt  Instance010_stdout.txt  Instance011_stdout.txt  Instance012_stdout.txt
BatchScripts/Parallel_Run_Logs/JobController/: Instance001_stdout.txt  Instance002_stdout.txt  Instance003_stdout.txt  Instance004_stdout.txt  Instance005_stdout.txt  Instance006_stdout.txt  Instance007_stdout.txt  Instance008_stdout.txt  Instance009_stdout.txt  Instance010_stdout.txt  Instance011_stdout.txt  Instance012_stdout.txt  Instance013_stdout.txt  Instance014_stdout.txt  Instance015_stdout.txt  Instance016_stdout.txt  Instance017_stdout.txt  Instance018_stdout.txt  summary.txt
BatchScripts/Parallel_Run_Logs/job_ABC_benchmark_16/: Instance001_stdout.txt  Instance002_stdout.txt  Instance003_stdout.txt  Instance004_stdout.txt  Instance005_stdout.txt  Instance006_stdout.txt  Instance007_stdout.txt  Instance008_stdout.txt  Instance009_stdout.txt  Instance010_stdout.txt  Instance011_stdout.txt  Instance012_stdout.txt  Instance013_stdout.txt  Instance014_stdout.txt  Instance015_stdout.txt  Instance016_stdout.txt
BatchScripts/Parallel_Run_Logs/job_ABC_chunk_00_16/: Instance001_stdout.txt  Instance002_stdout.txt  Instance003_stdout.txt  Instance004_stderr.txt  Instance004_stdout.txt  Instance005_stdout.txt  Instance006_stdout.txt  (+10 more)
BatchScripts/archive/: BatchProcess_1.bat  BatchProcess_12.bat  BatchProcess_4.bat  MultiThread_3.bat  MultiThread_6.bat  MultiThread_9.bat  SingleThread.bat  run_all.bat
BatchScripts/job_template/: ControllerProcess_template.bat  StatisticsProcess_16.bat
BatchScripts/jobs/: run_benchmark_default.bat  run_benchmark_zip.bat  run_stats_100k.bat  run_stats_1f0_mio.bat  run_stats_250k.bat  run_stats_500k.bat
JobController/: JobController.cpp  JobController.vcxproj  JobController.vcxproj.filters
JobController/Scripts/: Scripts.cpp  Scripts.h
JobController/Tools/: ZipUtility.cpp  ZipUtility.h  jobUtility.cpp  jobUtility.h
JobController/include/: Scripts.h  jobUtility.h
JobController/src/: Scripts.cpp  ZipUtility.cpp  jobUtility.cpp
OpenVDB_Voxel/: ABCProcessing.cpp  ABCProcessing.h  DL_Preprocessing.cpp  DataContainer.cpp  DatasetStats.cpp  DatasetStats.h  DatasetToVoxel.cpp  GenericDirectoryProcess.cpp  GenericDirectoryProcess.h  GetABCStatistics.cpp  GetABCStatistics.h  IO_Test.cpp  LOG.cpp  LOG.h  MeshDataHandling.cpp  MeshDataHandling.h  MyTypes.h  NoiseOnMesh.cpp  NoiseOnMesh.h  OpenVDB_Voxel.cpp  OpenVDB_Voxel.vcxproj  OpenVDB_Voxel.vcxproj.filters  ProcessChildren.cpp  ProcessChildren.h  Scripts.cpp  Scripts.h  Tools.cpp  Tools.h  zlibFunction.h
OpenVDB_Voxel/include/: ABCProcessing.h  DL_Preprocessing.h  DataContainer.h  DatasetToVoxel.h  GetABCStatistics.h  IO_Test.h  MyTypes.h  ProcessChildren.h  Scripts.h  Tools.h  binArrayReader.h
OpenVDB_Voxel/src/: ABCProcessing.cpp  DL_Preprocessing.cpp  DataContainer.cpp  DatasetStats.cpp  DatasetToVoxel.cpp  GenericDirectoryProcess.cpp  GetABCStatistics.cpp  IO_Test.cpp  LOG.cpp  MeshDataHandling.cpp  NoiseOnMesh.cpp  OpenVDB_Voxel.cpp  ProcessChildren.cpp  Scripts.cpp  Tools.cpp  binArrayReader.cpp
enc_temp_folder/64d85fd44dc0c2561703f60f021278/: OpenVDB_Voxel.cpp
(+406 files in other folders)
